change look of phone link on mobile fix #114

--- a/assets/sass/components/helpers.scss
+++ b/assets/sass/components/helpers.scss
@@ -63,3 +63,17 @@
   display: table-cell;
   vertical-align: middle;
 }
+
+
+// Workaround for inline visible-xs (was display:block by default)
+@media screen and (max-width: $screen-xs-max) {
+    .visible-xs-inline {
+        display: inline-block !important;
+    }
+}
+
+@media screen and (min-width: $screen-sm-min) {
+    .visible-xs-inline {
+        display: none !important;
+    }
+}
